<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <!-- <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />-->

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_search"
        android:title="@string/title_product" />

    <!--<item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/title_scan" />-->
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_sales"
        android:icon="@drawable/ic_product"
        android:title="@string/title_sales" />

  <item
        android:id="@+id/navigation_return"
        android:icon="@drawable/ic_return"
        android:title="@string/title_return" />

    <item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/ic_summary"
        android:visible="false"
        android:title="@string/title_summary" />

</menu>
