<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.sales.ssc.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.sales.ssc.ui.products.ProductsFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_navigation_product_to_addProductFragment"
            app:destination="@id/addProductFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sales.ssc.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.sales.ssc.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_navigation_cart_to_salesPrintFragment"
            app:destination="@id/salesPrintFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_return"
        android:name="com.sales.ssc.ui.returnItem.ReturnFragment"
        android:label="@string/return_products"
        tools:layout="@layout/fragment_return">

        <action
            android:id="@+id/action_navigation_return_to_productsSearchFragment"
            app:destination="@id/productsSearchFragment" />
    </fragment>
    <fragment
        android:id="@+id/productsSearchFragment"
        android:name="com.sales.ssc.ui.returnItem.ProductsSearchFragment"
        android:label="@string/search_product"
        tools:layout="@layout/fragment_products">
        <action
            android:id="@+id/action_productsSearchFragment_to_bottomProductReturnFragment"
            app:destination="@id/bottomProductReturnFragment" />

    </fragment>
    <dialog
        android:id="@+id/bottomProductReturnFragment"
        android:name="com.sales.ssc.ui.returnItem.BottomProductReturnFragment"
        android:label="BottomProductReturnFragment"
        tools:layout="@layout/fragment_bottom_return_product_dialog">
        <argument
            android:name="getProducts"
            app:argType="com.sales.ssc.response.GetProducts" />
        <action
            android:id="@+id/action_bottomProductReturnFragment_to_navigation_return"
            app:destination="@id/navigation_return"
            app:popUpTo="@id/navigation_return" />
    </dialog>
    <dialog
        android:id="@+id/bottomSheetFragment"
        android:name="com.sales.ssc.ui.scan.BottomSheetFragment"
        android:label="BottomSheetFragment"
        tools:layout="@layout/fragment_bottom_sheet_dialog">
        <argument
            android:name="data"
            app:argType="com.sales.ssc.response.GetProducts" />
    </dialog>

    <fragment
        android:id="@+id/salesFragment"
        android:name="com.sales.ssc.ui.sales.SalesFragment"
        android:label="Sales"
        tools:layout="@layout/fragment_sales">
    </fragment>
    <fragment
        android:id="@+id/navigation_sales"
        android:name="com.sales.ssc.ui.sales.SalesNewFragment"
        android:label="Sales"
        tools:layout="@layout/fragment_sales_new" >
        <action
            android:id="@+id/action_navigation_sales_to_salesPrintFragment"
            app:destination="@id/salesPrintFragment" />
    </fragment>
    <fragment
        android:id="@+id/returnSalesFragment"
        android:name="com.sales.ssc.ui.sales.ReturnSalesFragment"
        android:label="fragment_return_sales"
        tools:layout="@layout/fragment_return_sales" >
    </fragment>

    <fragment
        android:id="@+id/salesPrintFragment"
        android:name="com.sales.ssc.ui.sales.SalesPrintFragment"
        android:label="Estimate"
        tools:layout="@layout/fragment_sales_print">
        <argument
            android:name="responseByDate"
            app:argType="com.sales.ssc.response.ResponseByDate" />

        <action
            android:id="@+id/action_fragment_3_to_fragment_1"
            app:destination="@id/navigation_sales"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/navigation_sales" />
    </fragment>
    <fragment
        android:id="@+id/navigation_summary"
        android:name="com.sales.ssc.ui.summary.SummaryFragment"
        android:label="@string/title_summary"
        tools:layout="@layout/fragment_summary" />
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.sales.ssc.ui.products.AddProductFragment"
        android:label="@string/add_product"
        tools:layout="@layout/fragment_addproduct" >
        <action
            android:id="@+id/action_addProductFragment_to_navigation_product"
            app:destination="@id/navigation_product"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@+id/navigation_product" />
    </fragment>
</navigation>
