<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sales.SalesPrintFragment">

    <TextView
        android:id="@+id/txtInvoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/estimate"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPrintDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInvoice" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/borderColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrintDate" />


    <TextView
        android:id="@+id/tCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:padding="5dp"
        android:text="@string/name"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/txtCustomer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:padding="5dp"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tCustomerName"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/tCustomerMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:padding="5dp"
        android:text="@string/mobile_no"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tCustomerName" />

    <TextView
        android:id="@+id/txtCustomerMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:padding="5dp"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tCustomerMobile"
        app:layout_constraintTop_toBottomOf="@+id/tCustomerName" />

    <TextView
        android:id="@+id/tCustomerCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:padding="5dp"
        android:text="@string/city"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tCustomerName" />

    <TextView
        android:id="@+id/txtCustomerCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:padding="5dp"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tCustomerCity"
        app:layout_constraintTop_toBottomOf="@+id/tCustomerName" />

    <TextView
        android:id="@+id/tSalesName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:padding="5dp"
        android:text="@string/sales_person"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tCustomerCity" />

    <TextView
        android:id="@+id/txtSalesPerson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:padding="5dp"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tSalesName"
        app:layout_constraintTop_toBottomOf="@+id/tCustomerCity" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/borderColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tSalesName" />

    <TextView
        android:id="@+id/txtItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/items"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSalesPerson" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/borderColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItem" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSalesPrint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPrint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPrint"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/print"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>